--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,38 @@
 .App-header {
   display: flex;
-  background-color: #222;
-  height: 30px;
-  padding: 2%;
+  background-color: #2a434a;
+  padding: 1%;
   color: white;
-  text-align: left;
 }
 .name{
   margin: 0px;
   padding: 0px;
-  margin-left: 15px;
+  margin-left: 1%;
 }
 .fa-bars{
-  margin-top: 5px;
+  margin-top: 0.5%;
   font-size: 20px;
 }
+.github{
+  margin-left: 68%;
+}
+.fa-github{
+  font-size: 40px;
+  color: white;
+}
+.linked{
+  margin-left: 2%;
+}
+.fa-linkedin{
+  font-size: 40px;
+  color: #0077B5;
+}
 .navbar{
-  background-color: #222;
-  height: 20px;
+  background-color: #2a434a;
+  min-height: 20px;
   color: white;
   padding-bottom: 10px;
+  border-bottom: 2px solid white;
 }
 .list{
   margin: 0px;
@@ -34,11 +47,10 @@
   text-align: center;
   font-size: 20px;
 }
-.fa-github{
-  font-size: 40px;
-  margin-left: 70%;
-}
-.fa-linkedin{
-  font-size: 40px;
-  margin-left: 40%;
+.content{
+  height: 560px;
+  background-image: url("/images/back.png");
+  background-size: 100% 100%; 
+  background-repeat: no-repeat;
+  opacity: 0.5;
 }
