--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,30 @@
   padding: 1%;
   color: #c7d1d8;
 }
+.myname{
+  padding: 0px;
+  text-decoration: none;
+  color: #c7d1d8;
+  margin-left: 1%;
+  width: 28%
+}
 .name{
   margin: 0px;
   padding: 0px;
   margin-left: 1%;
-  font-family: "Times New Roman", Georgia, Serif;
-  font-style: italic;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
+.name:hover{
+  color: grey;
 }
 .openbtn{
   margin-top: 0.5%;
   font-size: 25px;
   color: #c7d1d8;
+}
+.openbtn:hover{
+  color: grey;
 }
 .slideHeader {
   width: 100%;
@@ -43,6 +56,9 @@
   margin-top: -85px;
   margin-left: 270px;
 }
+.closebtn:hover{
+  color: grey;
+}
 .sidenav {
     height: 100%;
     width: 300px;
@@ -59,31 +75,52 @@
 .links {
     background-color: white;
     display: flex;
-    align-items: flex-start;
     flex-direction: column;
     width: 100%;
-    height: 560px;
-    padding-top: 15px;
+    height: 580px;
+}
+.links h1{
+  color: grey;
+  margin-left: 34%;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
+.links hr{
+  color: grey;
+  width: 100%;
+  margin-top: 3px;
 }
 .links a{
   text-decoration: none;
-  font-size: 14px;
-  font-weight: 500;
-  width: 300px;
-  height: 50px;
-  padding-top: 15px;
+  color: grey;
+  font-size: 15px;
+  margin-left: 10%;
 }
-.space {
-    width: 0px;
-    padding-top: 2px;
-    color: lightgrey;
-    padding-left: 15px;
+.links a h3{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
-.align {
-    display: flex;
+.sidegit{
+  margin-right: 10px;
+  font-size: 25px;
 }
-.align p{
-  margin-left: 45px;
+.sidelink{
+  margin-right: 10px;
+  font-size: 25px;
+}
+.fa-address-card-o{
+  margin-right: 10px;
+  font-size: 20px;
+}
+.email{
+  margin-right: 10px;
+  font-size: 20px;
+}
+.sidephone{
+  margin-right: 10px;
+  font-size: 23px;
 }
 .backdrop {
   z-index: 2;
@@ -106,16 +143,16 @@
     transition: all 300ms ease;
 }
 .github{
-  margin-left: 65%;
+  margin-left: 60%;
 }
-.fa-github{
+.githead{
   font-size: 40px;
   color: white;
 }
 .linked{
   margin-left: 2%;
 }
-.fa-linkedin{
+.linkhead{
   font-size: 40px;
   color: #0077B5;
 }
@@ -140,7 +177,8 @@
   width: 120px;
   text-align: center;
   font-size: 20px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 .dontignore{
   float: left;
@@ -149,12 +187,16 @@
   width: 120px;
   text-align: center;
   font-size: 20px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   padding-left: 7px;
 }
 .nodec{
   text-decoration: none;
   color: white;
+}
+.nodec:hover{
+  color: grey;
 }
 
 
@@ -195,8 +237,8 @@
 .hi2{
   font-family: 'Roboto', sans-serif;
   color: #571F1F;
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 25px;
+  font-weight: 300;
 }
 .desc{
   border-radius: 2px;
@@ -292,12 +334,12 @@
   color: white;
   font-weight: 300;
 }
-.fa-envelope{
+.mail{
   color: white;
   font-size: 25px;
   margin-right: 20px;
 }
-.fa-phone{
+.phone{
   color: white;
   font-size: 25px;
   margin-right: 20px;
