--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   text-decoration: none;
   color: #c7d1d8;
   margin-left: 1%;
-  width: 28%
+  width: 28%;
 }
 .name{
   margin: 0px;
@@ -105,6 +105,10 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
+.links a :hover{
+  color: #045555;
+  font-weight: 700;
+}
 .icons{
   margin-right: 10px;
   font-size: 25px;
@@ -133,22 +137,19 @@
     left: 0px;
     transition: all 300ms ease;
 }
-.github{
+.flip{
   margin-left: 55%;
 }
 .githead{
   font-size: 40px;
   color: white;
 }
-.angel{
+.flip2{
   margin-left: 2%;
 }
 .angelhead{
   font-size: 40px;
   color: white;
-}
-.linked{
-  margin-left: 2%;
 }
 .linkhead{
   font-size: 40px;
@@ -195,6 +196,7 @@
 }
 .nodec:hover{
   color: grey;
+  font-weight: 700;
 }
 
 
@@ -238,6 +240,7 @@
   font-size: 25px;
   font-weight: 300;
 }
+
 .desc{
   border-radius: 2px;
   width: 70%;
@@ -415,6 +418,10 @@
   font-size: 22px;
   font-weight: 300;
   color: white;
+}
+.fbicons{
+  display: flex;
+  margin-left: 37%;
 }
 .cicon{
   font-size: 30px;
